# ThinkMate

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  changelog.md  docker-compose.yml  main.py  persona.md  personaStandard.md  pyproject.toml  requirements.txt
.agents/rules/: commit_rules.md  document_changes.md
app/: __init__.py  config.py
docs/: architecture.md  project_plan.md  repository_structure.md  setup_guide.md
tests/: conftest.py  run_llm_live.py  test_affinity_and_commands.py  test_ambient_gate.py  test_batching_and_concurrency.py  test_command_preservation.py  test_command_skip.py  test_compression_safety.py  test_consolidation_llm.py  test_consolidation_models.py  test_consolidation_run.py  test_consolidation_scheduler.py  test_database.py  test_dm_unchanged_regression.py  test_engagement_commands.py  test_engagement_models.py  test_engagement_temporal.py  test_engagement_units.py  test_group_config_observability.py  test_group_config_smoke.py  test_group_extraction.py  test_group_gate_helpers.py  test_group_models.py  test_group_plumbing.py  test_group_router_implicit.py  test_group_routing.py  test_guards_and_compression.py  test_hardening.py  test_health_and_command.py  test_logs_channel_config.py  test_membership_intro.py  test_metrics.py  test_metrics_instrumentation.py  test_metrics_logger.py  test_observability_command_wiring.py  test_persona_config.py  test_proactive_scheduler.py  test_prompt_language.py  test_prop_burst_aware_explicit.py  test_prop_burst_mention_exclusion.py  (+15 more)
tools/: __init__.py
(+91 files in other folders)
